--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         }
 
         .shop:hover {
-            font-size: 18px;
+            font-size:18px;
             color: orange;
         }
 
@@ -150,6 +150,9 @@
             font-size: 17px;
             margin: 10px 0px 30px 0px;
         }
+        .img-text h5{
+            font-size: 17px;
+        }
 
         .phone-img {
             height: auto;
@@ -181,7 +184,7 @@
             color: white;
             padding-left: 10px;
             font-weight: lighter;
-            font-size: 20px;
+            font-size: 17px;
         }
 
         .signup-lable {
@@ -451,13 +454,13 @@
 <body>
     <div class="container-fliud main-background">
         <div class="container-fliud background">
-            <nav class="navbar navbar-expand-lg">
+            <nav class="navbar navbar-expand-md">
                 <div class="container-xxl">
                     <a href="index.html" id="top" class="nav-brand nav-logo">
-                        <span><span style="color:orange;">Amy</span>Accessory</span>
+                        <span class="text-light"><span style="color:orange;">Amy</span>Accessory</span>
                     </a>
-
-                    <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#main-nav"
+    
+                    <button class="navbar-toggler  menu-icon" data-bs-toggle="collapse" data-bs-target="#main-nav"
                         aria-label=" toggler navigation" aria-controls="main-nav">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -479,27 +482,23 @@
                                 </li>
                                 <li class="nav-list"><a href="Accessories.html" class="nav-link a-link ">Accessories</a>
                                 </li>
-                                <li>
-                                    <hr class="divider">
+                                <hr class="divider">
                                 </li>
                                 <li class="nav-list"><a href="contact.html" class="nav-link a-link ">Contact</a></li>
                                 <li>
                                     <hr class="divider">
                                 </li>
-
+    
                             </ul>
                         </div>
-                        <!-- <a href="" class="but-group"><button
-                                class=" btn btn-outline-dark text-capitalize mx-4">login</button></a> -->
-                        <div class="mt-2 mx-lg-5 nav-icons-container">
+                        <div class="mt-2 mx-lg-5 ">
                             <i class="fa-solid fa-heart nav-icons p-2"></i>
                             <i class="fa-solid fa-cart-shopping nav-icons p-2"></i>
                             <i class="fa-solid fa-user nav-icons p-2" id="user"> </i>
                             <div class="link" id="login">
                                 <ul class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="login.html" class="login-link">Login</a></li>
-                                    <li class="breadcrumb-item text-light"> <a href="sign-up.html"
-                                            class="login-link">Sign In</a>
+                                    <li class="breadcrumb-item"><a href="#" class="login-link">Login</a></li>
+                                    <li class="breadcrumb-item text-light"> <a href="#" class="login-link">Sign In</a>
                                     </li>
                                 </ul>
                             </div>
@@ -524,16 +523,16 @@
                             <a href="each-products/bluetooth2.html"> <img src="/images/bluetooth.jpg"
                                     class="w-100 img-items" alt=""></a>
                             <div class="img-text">
-                                <h5>potable bluetooth speaker</h5>
-                                <span>$7000</span>
+                                <h5>portable bluetooth speaker</h5>
+                                <span>$85</span>
                             </div>
                         </div>
                         <div class="col-lg-6 col-xl-3 col-md-6 col-sm-12">
                             <a href="/each-products/camera1.html"> <img src="/images/cam1,1.webp"
                                     class="w-100 img-items" alt=""></a>
                             <div class="img-text">
-                                <h5> small potable camera</h5>
-                                <span>$7000</span>
+                                <h5>portable Digital Instant Print Camera</h5>
+                                <span>$99.99</span>
                             </div>
                         </div>
 
@@ -542,15 +541,15 @@
                                     alt=""></a>
                             <div class="img-text">
                                 <h5>wireless earbud headphones</h5>
-                                <span>$7000</span>
+                                <span>$17.93</span>
                             </div>
                         </div>
                         <div class="col-lg-6 col-xl-3 col-md-6 col-sm-12">
                             <a href="/each-products/mouse1.html"><img src="images/mouse2,1.webp" class="w-100 img-items"
                                     alt=""></a>
                             <div class="img-text">
-                                <h5> small potable mouse</h5>
-                                <span>$7000</span>
+                                <h5> small portable mouse</h5>
+                                <span>$11.97</span>
                             </div>
                         </div>
                     </div>
@@ -577,7 +576,7 @@
                 <img src="images/laptop-3.jpg" class="w-100 laptop-background" alt="">
                 <div class="laptop-img-content">
                     <h3>Laptops avaliable at afforable prizes</h3>
-                    <span><a href="" class="shop text-light">[Shop Now]</a></span>
+                    <span><a href="Computers.html" class="shop text-light">[Shop Now]</a></span>
                 </div>
                 <hr class="text-light mx-4 mb-5">
 
@@ -633,13 +632,13 @@
                                 <li class="footer-list footer-list2">Adderss: Kwankwashe Street, opposite IBB market Niger</li>
                                 <li class="footer-list">State: Niger State</li>
                                 <li class="footer-list">Email: amyogechi@gmail.com</li>
-                                <li class="footer-list">Phone: 234-812-099-1981</li>
+                                <li class="footer-list">Phone: +234-812-099-1981</li>
 
                             </ul>
                         </div>
                     </div>
                 </div>
-                <div class="container-fliud copy-right-box">
+                <div class="container copy-right-box">
                     <div class="row">
                         <div class="col">
                             <div class="col-3 "><span class="copy-right">&copy; 2025 by AmyAccessory</span></div>
