--- a/contact.html
+++ b/contact.html
@@ -361,9 +361,9 @@
                 <div class="col mx-4">
                     <hr class="text-light">
                     <h2 class="logo">Contact AmyAccessory</h2>
-                    <h6 class="contact">Contact us:234-812-099-1981</h6>
+                    <h6 class="contact">Contact us: +234-812-099-1981</h6>
                     <h6 class="contact">Email us:amyogechi@yahoo.com</h6>
-                    <h6 class="contact">opposite zenith,Nusukka Enugu state</h6>
+                    <h6 class="contact">Adderss: Kwankwashe Street, opposite IBB market Niger</h6>
                 </div>
                 <div class="col mx-5">
                     <hr class="text-light">
@@ -373,7 +373,7 @@
                     <div class="row">
                         <div class="col">
                             <form action="">
-                                <label class="text-capitalize text-light">Fist name</label>
+                                <label class="text-capitalize text-light">Frist name</label>
                                 <input type="text" class="form-control contact-name" name="Name" id="">
                             </form>
                         </div>
@@ -407,7 +407,7 @@
                             <p class="footer-paraghap-list footer-list2">Welcome to Amy Accessories, your trusted
                                 destination
                                 for high quality eletronic accessories. We stand behind our produts with 6-months
-                                guarantee, ensuring you can shop with confindence. Our mission is is to make the latest
+                                guarantee, ensuring you can shop with confindence. Our mission is to make the latest
                                 eletronic devices easily accessible to eyeryone</p>
                         </div>
                         <div class="col-12 col-lg-2 col-md-2 fs-md-5 footer-container">
@@ -427,11 +427,10 @@
                         <div class="col-12 col-lg-5 col-md-5 footer-container">
                             <h3 class=" text-capitalize  footer-header">INFO</h3>
                             <ul>
-                                <li class="footer-list footer-list2">Adderss: Kwankwashe Street, opposite IBB market
-                                    Niger</li>
+                                <li class="footer-list footer-list2">Adderss: Kwankwashe Street, opposite IBB market Niger</li>
                                 <li class="footer-list">State: Niger State</li>
                                 <li class="footer-list">Email: amyogechi@gmail.com</li>
-                                <li class="footer-list">Phone: 234-812-099-1981</li>
+                                <li class="footer-list">Phone: +234-812-099-1981</li>
 
                             </ul>
                         </div>
