--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
 
         /* nav icons */
         .nav-icons {
-            color: black;
+            color:orange;
         }
 
         .nav-icons:hover {
-            color: orange;
+            color: black;
         }
 
         .link {
@@ -153,7 +153,6 @@
         .img-text h5{
             font-size: 17px;
         }
-
         .phone-img {
             height: auto;
             object-fit: cover;
@@ -169,7 +168,6 @@
             cursor: pointer;
             border-radius: 1px;
         }
-
         .laptop-background {
             margin-top: 30px;
             height: 600px;
@@ -497,8 +495,8 @@
                             <i class="fa-solid fa-user nav-icons p-2" id="user"> </i>
                             <div class="link" id="login">
                                 <ul class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="#" class="login-link">Login</a></li>
-                                    <li class="breadcrumb-item text-light"> <a href="#" class="login-link">Sign In</a>
+                                    <li class="breadcrumb-item"><a href="login.html" class="login-link">Login</a></li>
+                                    <li class="breadcrumb-item text-light"> <a href="sign-up.html" class="login-link">Sign In</a>
                                     </li>
                                 </ul>
                             </div>
@@ -590,7 +588,7 @@
                                 <label for="email">Email</label>
                                 <input type="email" name="email" id="email" class="form-control input" required>
                                 <input type="checkbox" id="checkbox" class="form-check-input p-2 ms-2" required><span
-                                    class="mx-1 text-white">Yes, subscribe me to your newsOffers.</span>
+                                    class="mx-1 text-white">Yes, subscribe me to your newsletter.</span>
                                 <br>
                                 <button class="btn mt-3 Submit-btn">Submit</button>
                             </form>
@@ -629,7 +627,7 @@
                         <div class="col-12 col-lg-5 col-md-5 footer-container">
                             <h3 class=" text-capitalize  footer-header">INFO</h3>
                             <ul>
-                                <li class="footer-list footer-list2">Adderss: Kwankwashe Street, opposite IBB market Niger</li>
+                                <li class="footer-list footer-list2">Address: Kwankwashe Street, opposite IBB market Niger</li>
                                 <li class="footer-list">State: Niger State</li>
                                 <li class="footer-list">Email: amyogechi@gmail.com</li>
                                 <li class="footer-list">Phone: +234-812-099-1981</li>
