--- a/login.html
+++ b/login.html
@@ -122,14 +122,24 @@
       border-radius: 20px;
     }
 
-    .Signup {
+    /* .Signup {
       font-size: 16px;
-      margin-top: 40px;
-      margin-left: 50px;
+      margin-top:20px;
+     display: flex;
+     background-color:white;
+      box-shadow:18px 10px 12px lightgrey;
+     justify-content: end;
+    } */
+    .Signup button{
+      font-size: 16px;
+      margin-top:20px;
+     display: flex;
+     background-color:white;
+      box-shadow:18px 10px 12px lightgrey;
+     justify-content: end;
     }
-
-    .Signup span a {
-      color: rgb(40, 40, 138);
+    .Signup a{
+      color:black;
       text-decoration: none;
     }
   </style>
@@ -152,7 +162,7 @@
           <label for="password" class="password-label"><a href="#">Forget password?</a></label>
         </div>
         <button class="login">Login</button>
-        <p class="Signup">Not a member? <span><a href="sign-up.html">Signup now</a></span></p>
+        <p class="Signup"><button class="btn  Signup"><a href="index.html">Home</a></button></p>
       </form>
     </div>
   </section>
