--- a/login.html
+++ b/login.html
@@ -121,25 +121,21 @@
       width: 100%;
       border-radius: 20px;
     }
+    .Signup{
+      font-size: 16px;
+      margin-top:30px;
+     display: flex;
+     justify-content: center;
+    }
 
     /* .Signup {
       font-size: 16px;
-      margin-top:20px;
-     display: flex;
-     background-color:white;
-      box-shadow:18px 10px 12px lightgrey;
-     justify-content: end;
+      margin-top: 40px;
+      margin-left: 50px;
     } */
-    .Signup button{
-      font-size: 16px;
-      margin-top:20px;
-     display: flex;
-     background-color:white;
-      box-shadow:18px 10px 12px lightgrey;
-     justify-content: end;
-    }
-    .Signup a{
-      color:black;
+
+    .Signup a {
+      color: rgb(40, 40, 138);
       text-decoration: none;
     }
   </style>
@@ -162,7 +158,7 @@
           <label for="password" class="password-label"><a href="#">Forget password?</a></label>
         </div>
         <button class="login">Login</button>
-        <p class="Signup"><button class="btn  Signup"><a href="index.html">Home</a></button></p>
+        <p class="Signup"><a href="index.html">Back</a></p>
       </form>
     </div>
   </section>
