--- a/contact.html
+++ b/contact.html
@@ -362,7 +362,7 @@
                     <hr class="text-light">
                     <h2 class="logo">Contact AmyAccessory</h2>
                     <h6 class="contact">Contact us: +234-812-099-1981</h6>
-                    <h6 class="contact">Email us:amyogechi@yahoo.com</h6>
+                    <h6 class="contact">Email us: amyogechi@yahoo.com</h6>
                     <h6 class="contact">Adderss: Kwankwashe Street, opposite IBB market Niger</h6>
                 </div>
                 <div class="col mx-5">
@@ -373,7 +373,7 @@
                     <div class="row">
                         <div class="col">
                             <form action="">
-                                <label class="text-capitalize text-light">Frist name</label>
+                                <label class="text-capitalize text-light">First name</label>
                                 <input type="text" class="form-control contact-name" name="Name" id="">
                             </form>
                         </div>
@@ -405,10 +405,9 @@
                         <div class="col-12 col-lg-5 col-md-5 footer-container">
                             <h3 class=" text-capitalize  footer-header">Amy Eletronics Accessories</h3>
                             <p class="footer-paraghap-list footer-list2">Welcome to Amy Accessories, your trusted
-                                destination
-                                for high quality eletronic accessories. We stand behind our produts with 6-months
+                                destination for high quality electronic accessories. We stand behind our products with 6-months
                                 guarantee, ensuring you can shop with confindence. Our mission is to make the latest
-                                eletronic devices easily accessible to eyeryone</p>
+                                electronic devices easily accessible to everyone</p>
                         </div>
                         <div class="col-12 col-lg-2 col-md-2 fs-md-5 footer-container">
                             <h3 class=" text-capitalize  footer-header">Menu</h3>
@@ -427,7 +426,7 @@
                         <div class="col-12 col-lg-5 col-md-5 footer-container">
                             <h3 class=" text-capitalize  footer-header">INFO</h3>
                             <ul>
-                                <li class="footer-list footer-list2">Adderss: Kwankwashe Street, opposite IBB market Niger</li>
+                                <li class="footer-list footer-list2">Address: Kwankwashe Street, opposite IBB market Niger</li>
                                 <li class="footer-list">State: Niger State</li>
                                 <li class="footer-list">Email: amyogechi@gmail.com</li>
                                 <li class="footer-list">Phone: +234-812-099-1981</li>
