--- a/index.html
+++ b/index.html
@@ -603,12 +603,11 @@
                 <div class="container-fliud mx-4">
                     <div class="row">
                         <div class="col-12 col-lg-5 col-md-5 footer-container">
-                            <h3 class=" text-capitalize  footer-header">Amy Eletronics Accessories</h3>
+                            <h3 class=" text-capitalize  footer-header">Amy Electronics Accessories</h3>
                             <p class="footer-paraghap-list footer-list2">Welcome to Amy Accessories, your trusted
-                                destination
-                                for high quality eletronic accessories. We stand behind our produts with 6-months
-                                guarantee, ensuring you can shop with confindence. Our mission is is to make the latest
-                                eletronic devices easily accessible to eyeryone</p>
+                                destination for high quality electronic accessories. We stand behind our products with 6-months
+                                guarantee, ensuring you can shop with confindence. Our mission is to make the latest
+                                electronic devices easily accessible to everyone</p>
                         </div>
                         <div class="col-12 col-lg-2 col-md-2 fs-md-5 footer-container">
                             <h3 class=" text-capitalize  footer-header">Menu</h3>
