--- a/contact.html
+++ b/contact.html
@@ -363,7 +363,7 @@
                     <h2 class="logo">Contact AmyAccessory</h2>
                     <h6 class="contact">Contact us: +234-812-099-1981</h6>
                     <h6 class="contact">Email us: amyogechi@yahoo.com</h6>
-                    <h6 class="contact">Adderss: Kwankwashe Street, opposite IBB market Niger</h6>
+                    <h6 class="contact">Address: Kwankwashe Street, opposite IBB market Niger</h6>
                 </div>
                 <div class="col mx-5">
                     <hr class="text-light">
@@ -403,11 +403,9 @@
                 <div class="container-fliud mx-4">
                     <div class="row">
                         <div class="col-12 col-lg-5 col-md-5 footer-container">
-                            <h3 class=" text-capitalize  footer-header">Amy Eletronics Accessories</h3>
+                            <h3 class=" text-capitalize  footer-header">Amy Electronics Accessories</h3>
                             <p class="footer-paraghap-list footer-list2">Welcome to Amy Accessories, your trusted
-                                destination for high quality electronic accessories. We stand behind our products with 6-months
-                                guarantee, ensuring you can shop with confindence. Our mission is to make the latest
-                                electronic devices easily accessible to everyone</p>
+                                destination for high quality electronic accessories. We stand behind our products with 6-months guarantee, ensuring you can shop with confidence. Our mission is to make the latest electronic devices easily accessible to everyone</p>
                         </div>
                         <div class="col-12 col-lg-2 col-md-2 fs-md-5 footer-container">
                             <h3 class=" text-capitalize  footer-header">Menu</h3>
