--- a/Mobile.html
+++ b/Mobile.html
@@ -491,12 +491,9 @@
                 <div class="container-fliud mx-4">
                     <div class="row">
                         <div class="col-12 col-lg-5 col-md-5 footer-container">
-                            <h3 class=" text-capitalize  footer-header">Amy Eletronics Accessories</h3>
+                            <h3 class=" text-capitalize  footer-header">Amy Electronics Accessories</h3>
                             <p class="footer-paraghap-list footer-list2">Welcome to Amy Accessories, your trusted
-                                destination
-                                for high quality eletronic accessories. We stand behind our produts with 6-months
-                                guarantee, ensuring you can shop with confindence. Our mission is is to make the latest
-                                eletronic devices easily accessible to eyeryone</p>
+                                destination for high quality electronic accessories. We stand behind our products with 6-months guarantee, ensuring you can shop with confidence. Our mission is to make the latest electronic devices easily accessible to everyone</p>
                         </div>
                         <div class="col-12 col-lg-2 col-md-2 fs-md-5 footer-container">
                             <h3 class=" text-capitalize  footer-header">Menu</h3>
@@ -515,7 +512,7 @@
                         <div class="col-12 col-lg-5 col-md-5 footer-container">
                             <h3 class=" text-capitalize  footer-header">INFO</h3>
                             <ul>
-                                <li class="footer-list footer-list2">Adderss: Kwankwashe Street, opposite IBB market
+                                <li class="footer-list footer-list2">Address: Kwankwashe Street, opposite IBB market
                                     Niger</li>
                                 <li class="footer-list">State: Niger State</li>
                                 <li class="footer-list">Email: amyogechi@gmail.com</li>
